--- a/angular.json
+++ b/angular.json
@@ -5,6 +5,7 @@
     "api": "apps/api",
     "api-interfaces": "libs/api-interfaces",
     "expenses": "apps/expenses",
-    "expenses-e2e": "apps/expenses-e2e"
+    "expenses-e2e": "apps/expenses-e2e",
+    "features": "libs/features"
   }
 }
