Chart is working. Need to adjust position of total.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "@ngrx/store": "~14.0.0",
     "@nrwl/angular": "14.5.10",
     "boxicons": "^2.1.2",
+    "chart.js": "^3.9.1",
+    "lodash": "^4.17.21",
+    "ng2-charts": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
@@ -55,6 +58,7 @@
     "@nrwl/node": "14.5.10",
     "@nrwl/workspace": "14.5.10",
     "@types/jest": "27.4.1",
+    "@types/lodash": "^4.14.184",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
