Unit tests for api was not working - now FIXED. The api library was not setup correct, so created a new library then moved all the files.

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "strictPropertyInitialization": false,
     "baseUrl": ".",
     "paths": {
+      "@angular-tailwind-nx/api-core": ["libs/api-core/src/index.ts"],
       "@angular-tailwind-nx/api-interfaces": [
         "libs/api-interfaces/src/index.ts"
       ],
