--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,7 @@
   "version": 2,
   "projects": {
     "api": "apps/api",
+    "api-core": "libs/api-core",
     "api-interfaces": "libs/api-interfaces",
     "expenses": "apps/expenses",
     "expenses-e2e": "apps/expenses-e2e",
