--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "jasmine-marbles": "~0.9.1",
     "jest": "27.5.1",
     "jest-preset-angular": "~11.1.2",
+    "mongodb-memory-server": "^8.9.3",
     "nx": "14.5.10",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
