--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "nx": "14.5.10",
     "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "supertest": "^6.3.0",
     "tailwindcss": "^3.0.2",
     "ts-jest": "27.1.4",
     "ts-node": "10.9.1",
